--- a/sass/blocks/_card-skills.scss
+++ b/sass/blocks/_card-skills.scss
@@ -196,6 +196,7 @@
     top: 10px;
     right: 10px;
     transition: 0.5s ease-in;
+    background-color: transparent;
 
     &:hover{
         transform: rotate(360deg);
