fix: fixed menu

--- a/css/main.css
+++ b/css/main.css
@@ -861,7 +861,7 @@ select:-webkit-autofill:focus {
 }
 
 .mobile-menu {
-  background-color: rgba(3, 121, 255, 0.701);
+  background-color: red;
   position: fixed;
   top: -100vh;
   left: 0;
