fix: fixed fade-block for mobile

--- a/sass/blocks/_mobile-menu.scss
+++ b/sass/blocks/_mobile-menu.scss
@@ -1,5 +1,5 @@
 .mobile-menu {
-    background-color: red;
+    background-color: rgba(3, 121, 255, 0.701);
     position: fixed;
     top: -100vh;
     left: 0;
