--- a/css/main.css
+++ b/css/main.css
@@ -635,17 +635,22 @@ select:-webkit-autofill:focus {
 
 .fade-block {
   position: fixed;
-  top: -100%;
+  top: 0;
   left: 0;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
   width: 100%;
   height: 100vh;
-  background-color: rgba(3, 121, 255, 0.701);
+  background-color: red;
   z-index: 3;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
 }
 .fade-block.open {
-  top: 0;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .card-skill__description {
@@ -861,7 +866,7 @@ select:-webkit-autofill:focus {
 }
 
 .mobile-menu {
-  background-color: red;
+  background-color: rgba(3, 121, 255, 0.701);
   position: fixed;
   top: -100vh;
   left: 0;
