--- a/sass/blocks/_card-skills.scss
+++ b/sass/blocks/_card-skills.scss
@@ -205,16 +205,17 @@
 
 .fade-block {
     position: fixed;
-    top: -100%;
+    top: 0;
     left: 0;
+    transform: translateY(-100%);
     width: 100%;
     height: 100vh;
-    background-color: rgba(3, 121, 255, 0.701);
+    background-color: red;
     z-index: 3;
-    transition: 0.5s;
+    transition: transform 0.5s;
 
     &.open {
-        top: 0;
+        transform: translateY(0);
     }
 }
 .card-skill__description{
