--- a/sass/base/_vars.scss
+++ b/sass/base/_vars.scss
@@ -1,6 +1,6 @@
 $colorText:#f0e3ca;
 $colorTitle: #0377FF;
-$colorCard: #21201D;
+$colorCard: #21201d;
 $colorButton: #32312E;
 $colorBackside: rgba(33, 32, 29, 0.8);
 $colorScroll: rgb(22, 28, 54);
