--- a/sass/blocks/_card-skills.scss
+++ b/sass/blocks/_card-skills.scss
@@ -210,7 +210,7 @@
     transform: translateY(-100%);
     width: 100%;
     height: 100vh;
-    background-color: red;
+    background-color: rgba(3, 121, 255, 0.701);
     z-index: 3;
     transition: transform 0.5s;
 
