--- a/sass/sections/_review.scss
+++ b/sass/sections/_review.scss
@@ -7,6 +7,11 @@
     width: 80%;
     margin: 0 auto;
     position: relative;
+
+    @media (max-width: 768px){
+        width: 100%;
+    }
+
 }
 .slick-list{
     overflow: hidden;
