--- a/sass/blocks/_titles.scss
+++ b/sass/blocks/_titles.scss
@@ -21,6 +21,9 @@
     @media (max-width: 662px) {
         font-size: 40px;
     }
+    @media (max-width: 500px){
+        font-size: 34px;
+    }
 }
 .wrapper-main-subtitle {
     margin-bottom: 14px;
@@ -38,6 +41,9 @@
     /* Mobile */
     @media (max-width: 662px) {
         font-size: 32px;
+    }
+    @media (max-width: 500px){
+        font-size: 28px;
     }
 }
 .context-title{
