--- a/sass/main.css
+++ b/sass/main.css
@@ -371,6 +371,7 @@ select:-webkit-autofill:focus {
 .accessory {
   height: 100px;
   width: 100px;
+  flex-shrink: 0;
 }
 
 .context-button {
@@ -888,7 +889,7 @@ select:-webkit-autofill:focus {
 
 .about-me__description {
   font-size: 24px;
-  width: 904px;
+  max-width: 904px;
   line-height: 1.05;
   /* Tablet */
   /* Mobile */
@@ -896,16 +897,16 @@ select:-webkit-autofill:focus {
 @media (max-width: 1243px) {
   .about-me__description {
     font-weight: 500;
-    width: 451px;
     font-size: 22px;
     line-height: 1.2;
   }
 }
 @media (max-width: 662px) {
   .about-me__description {
-    width: 322px;
+    width: 100%;
     font-size: 22px;
     line-height: 1.2;
+    text-align: center;
   }
 }
 
@@ -916,9 +917,6 @@ select:-webkit-autofill:focus {
   justify-content: center;
   align-items: center;
   /* Mobile */
-}
-.about-me__content > * {
-  flex-shrink: 0;
 }
 @media (max-width: 662px) {
   .about-me__content {
