--- a/sass/sections/_my-skills.scss
+++ b/sass/sections/_my-skills.scss
@@ -8,20 +8,13 @@
 
 .my-skills__row-cards {
     display: flex;
-    column-gap: 16px;
+    gap: 16px;
     justify-content: center;
+    flex-wrap: wrap;
     
-    /* Tablet */
-    @media (max-width:1243px){
-        row-gap: 16px;
-        flex-wrap: wrap;
-        
-    }
-
     /* Mobile */
     @media (max-width: 662px) {
         flex-direction: column;
         align-items: center;
-        row-gap: 16px;
     }
 }
