--- a/sass/main.css
+++ b/sass/main.css
@@ -1144,7 +1144,7 @@ select:-webkit-autofill:focus {
 
 .form {
   background-color: #21201d;
-  width: 40%;
+  width: 500px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -1153,6 +1153,11 @@ select:-webkit-autofill:focus {
   padding-bottom: 30px;
   padding-top: 30px;
   border-radius: 20px;
+}
+@media (max-width: 768px) {
+  .form {
+    width: 100%;
+  }
 }
 
 .form__item {
