--- a/sass/blocks/_mobile-menu.scss
+++ b/sass/blocks/_mobile-menu.scss
@@ -18,7 +18,11 @@
     left: 50%;
     transform: translate(-50%,-50%);
     text-align: center;
-    
+    .anchor-link{
+        font-size: 20px;
+        font-weight: 600;
+
+    }
 }
 
 
