--- a/sass/blocks/_social-list.scss
+++ b/sass/blocks/_social-list.scss
@@ -5,6 +5,11 @@
     flex-wrap: wrap;
     row-gap: 25px;
     
+    @media (max-width: 768px){
+        flex-direction: column;
+        align-items: center;
+    }
+
     /* Mobile */
     @media (max-width: 662px) {
         flex-direction: column;
