--- a/sass/main.css
+++ b/sass/main.css
@@ -683,6 +683,12 @@ select:-webkit-autofill:focus {
   row-gap: 25px;
   /* Mobile */
 }
+@media (max-width: 768px) {
+  .social-list {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 @media (max-width: 662px) {
   .social-list {
     flex-direction: column;
